<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_spiral">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        android:elevation="5dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Back Arrow -->

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_marginStart="-25dp"
                android:clickable="true"
                android:contentDescription="@string/navigate_back"
                android:padding="8dp"
                android:src="@drawable/back_arrow" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/backArrow"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:text="@string/forgot_password1"
                android:textColor="@color/DarkBlue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="-71dp"
                android:contentDescription="@string/app_logo"
                android:background="@drawable/rounded_logo_background"
                android:padding="1dp"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:src="@drawable/logo" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/please_enter_your_name_email_address_and_employee_id_number_we_ll_send_your_password_information_shortly"
            android:textColor="@color/DarkBlue"
            android:textSize="14sp"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/editTextName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Name"
            android:hint="@string/enter_your_name"
            android:textColor="@color/DarkBlue"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Email Address"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/DarkBlue"
            android:padding="12dp" />

        <EditText
            android:id="@+id/editTextEmployeeNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="Employee Number"
            android:textColor="@color/DarkBlue"
            android:hint="@string/enter_your_employee_number"
            android:padding="12dp" />

        <Button
            android:id="@+id/buttonResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/recover_password" />

    </LinearLayout>

</LinearLayout>
